# terse

./: .codegraph  .docvet.json  .gitignore  .gitleaksignore  .runechoguardignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  TECHNICAL.md  USAGE.md  VERIFY.md  policy.example.json  pyproject.toml
.github/workflows/: release.yml  tests.yml
list/.ai/: ir.json
scripts/: gen_stress_corpus.py
scripts/bench/: benchmark.py  diff_demo.py  fetch_corpus.sh  package-lock.json  package.json  text_alias_ceiling.py  toon_encode.mjs  width_sweep.py
scripts/bench/corpus/: gh_commits.json  gh_commits_flat.json  gh_dir_listing.json  gh_issues.json  gh_labels.json  gh_pulls.json  gh_rate_limit.json  gh_repo_single.json  gh_workflow_runs.json
scripts/bench/mcp_servers/: README.md  mcp_probe.py
scripts/bench/mcp_servers/webfix/: index.html
scripts/probe/structured_content/: README.md  context_capture.py  report.py  run_capture.sh  structured_server.py
src/terse/: __init__.py  __main__.py  _secure_io.py  capture.py  cli.py  dropeval.py  fluency.py  history.py  html_report.py  install_mcp.py  lossy.py  measure.py  multiproxy.py  policy.py  policy_gen.py  probes.py  proxy.py  report.py  stats.py  terminal_report.py  text_diff.py  tokenize.py  transforms.py  transport.py
src/terse/fluency/: __init__.py  answerers.py  harnesses.py  pack.py  questions.py  scoring.py
tests/: conftest.py  fake_mcp_server.py  test_capture.py  test_cli.py  test_codec_hotpath.py  test_diff.py  test_diff_soak.py  test_drop.py  test_dropeval.py  test_fluency.py  test_fuzz.py  test_history.py  test_html_report.py  test_install_mcp.py  test_lossy.py  test_measure.py  test_multiproxy.py  test_policy.py  test_policy_gen.py  test_probes.py  test_proxy.py  test_report.py  test_roundtrip.py  test_secure_io.py  test_session_dict.py  test_session_dict_live.py  test_stats.py  test_terminal_report.py  test_text_alias_ceiling.py  test_text_diff.py  test_text_drop.py  test_transport.py  test_verify.py
