[project]
# Distribution name (`pip install terse-mcp`) — the bare `terse` is taken on PyPI by an
# unrelated CLI. The IMPORT package stays `terse` (see [tool.hatch.build.targets.wheel]);
# install_mcp bakes `-m terse` into wrapped configs, so that name must not change.
name = "terse-mcp"
dynamic = ["version"]
description = "Lossless-first compression layer for AI-agent tool outputs — byte-faithful on fields you mark critical, configurable lossy reduction only where you opt in."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eric Minish", email = "eric.minish@gmail.com" }]
keywords = ["mcp", "llm", "tokens", "compression", "lossless", "json", "proxy", "agent", "context-window"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    # tiktoken: cl100k_base token counts for headroom-eval parity. uv.lock pins the exact
    # version for this repo; the floor here gives a lockfile-less `pip install terse-mcp` a
    # sane lower bound instead of resolving to an arbitrarily old release.
    # The floor is raised (was >=0.7, a 2023 release) and capped at the next MAJOR: a
    # lockfile-less `pip install terse-mcp` ignores uv.lock entirely, so the range here is
    # the ONLY thing constraining what a downstream user actually gets. An unbounded floor
    # that old widened the supply-chain surface for no benefit — nothing in terse uses an
    # API older than 0.8, and every version in range is verified by the same round-trip gate.
    "tiktoken>=0.8,<1",
]

[project.urls]
Homepage = "https://github.com/inth3shadows/terse"
Repository = "https://github.com/inth3shadows/terse"
Issues = "https://github.com/inth3shadows/terse/issues"

[project.scripts]
terse = "terse.cli:main"

[dependency-groups]
# hypothesis: property-based fuzzing of the lossless guarantee (M3 — tests/test_fuzz.py).
# Dev-only, no runtime dependency. Unpinned like the others; uv.lock carries the exact pin.
dev = ["pytest", "ruff", "mypy", "hypothesis"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Single source of version truth: the GIT TAG. hatch-vcs derives the version from
# `git describe`, so pyproject, the package, and the release CANNOT drift — a mismatch
# is structurally impossible (no hand-synced literal to forget). A build between tags
# gets a dev version (e.g. 0.1.1.dev3+g<sha>); a build ON a tag gets that tag (v0.1.0
# -> 0.1.0). Requires full git history in CI (`fetch-depth: 0`).
[tool.hatch.version]
source = "vcs"

# Write the resolved version to a build-time file so the installed package can expose
# `__version__` without a runtime git dependency. Gitignored — it is generated, never
# committed. `__init__.py` imports it, falling back to importlib.metadata in a raw
# (un-built) source tree.
[tool.hatch.build.hooks.vcs]
version-file = "src/terse/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/terse"]

[tool.ruff.lint]
# Curated beyond ruff's minimal default (E4/E7/E9/F): import order, real bug
# patterns, modern-syntax upgrades, comprehension and simplification wins. Style-only
# packs are deliberately left out — the gate is for defects, not formatting taste.
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "C4", "SIM", "RET", "PLE"]
ignore = [
    "SIM108",  # ternary-vs-if is a readability call, not a defect
    "SIM105",  # contextlib.suppress: try/except-pass is clearer at fail-open sites
]

[tool.mypy]
# Lenient baseline (audit fix #1): the goal is to make the existing annotations a
# CHECKED contract, not to win strictness awards on day one. Ratchet later.
python_version = "3.11"
files = ["src/terse"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true

# `terse._version` is generated by hatch-vcs at build time and gitignored — it may be
# absent when mypy runs on a fresh checkout. `__init__.py` imports it under try/except,
# so a missing module is expected, not an error.
[[tool.mypy.overrides]]
module = "terse._version"
ignore_missing_imports = true
